--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ input.blue-button {
   color: white;
   font-size: smaller;
   max-width: 200px;
-  border-radius: 0px;
+  border-radius: 10px;
   border: 1px solid #156bbd;
   float: right;
   padding: 10px 2px;
@@ -50,6 +50,7 @@ input.blue-button {
 
 .btn {
   background-color: dodgerblue;
+  color: white;
 }
 
 .header, .header-advanced, .header-advanced-logo, .header-links {
